# threadlens

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
eval/: README.md  custom-source.eval.json  custom-source.example.jsonl  thread-search.example.json
launch/: README.md  announcement.md  demo-script.md  faq.md  launch-checklist.md  positioning.md  producthunt.md
npm/: README.md  package.json
npm/scripts/: sync.mjs
npm/test/: shim.test.mjs
packaging/: threadlens.spec  threadlens_entry.py
raycast/: CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast/src/: threadlens.tsx
tests/: test_cli.py  test_extract.py  test_freshness.py  test_profiles.py  test_ranking_golden.py  test_redaction.py  test_search.py  test_skill.py  test_store_indexes.py
threadlens/: __init__.py  cli.py  extract.py  models.py  paths.py  profiles.py  sources.py  store.py
threadlens/skills/threadlens/: SKILL.md
threadlens/skills/threadlens/agents/: openai.yaml
