[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "threadlens"
version = "0.1.0"
description = "Local cross-harness search for agent threads"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Threadlens Contributors" }]
keywords = ["agents", "cli", "search", "sqlite", "raycast"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
]
dependencies = []

[project.scripts]
threadlens = "threadlens.cli:main"

[tool.setuptools.packages.find]
include = ["threadlens*"]
