[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "threadlens"
version = "1.1.1"
description = "Local cross-harness search for agent threads"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Threadlens Contributors" }]
keywords = ["agents", "cli", "search", "sqlite", "raycast"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/moinulmoin/threadlens"
Repository = "https://github.com/moinulmoin/threadlens"
Issues = "https://github.com/moinulmoin/threadlens/issues"

[project.scripts]
threadlens = "threadlens.cli:main"

[tool.setuptools.packages.find]
include = ["threadlens*"]

[tool.setuptools.package-data]
threadlens = [
  "skills/threadlens/SKILL.md",
  "skills/threadlens/agents/openai.yaml",
]
